Disable Generate Primitive for molecules
If a non-unit cell molecule is loaded, the Genereate Primitive is
grayed-out.

There are currently some problems with updating the molecule pertaining
to unit cells.

1. Unless the atoms move, the molecule is not officially changed.
2. Chaning cell parameters while the Primitive is selected causes a
crash
3. Removing the unit cell can cause a crash

Change-Id: I422a1f4263ec01302827df699f5eaf8d8ff29941

--- a/libavogadro/src/extensions/quantuminput/fhiaimsinputdialog.ui
+++ b/libavogadro/src/extensions/quantuminput/fhiaimsinputdialog.ui
@@ -169,7 +169,7 @@
           <item>
            <widget class="QLabel" name="label">
             <property name="text">
-             <string>Crystal Structure Specification</string>
+             <string>Geometry Specification</string>
             </property>
            </widget>
           </item>
@@ -177,7 +177,7 @@
            <widget class="QComboBox" name="crystalCombo">
             <item>
              <property name="text">
-              <string>Displayed Crystal Structure</string>
+              <string>Use Displayed Geometry</string>
              </property>
             </item>
             <item>
