Improved control.in keywords
Added a bit of logic to disable and enable keywords.

All keywords are currently untested!!

Change-Id: Ic31add95ae4f55c446e1283038e4246c8485f3db

--- a/libavogadro/src/extensions/quantuminput/fhiaimsinputdialog.ui
+++ b/libavogadro/src/extensions/quantuminput/fhiaimsinputdialog.ui
@@ -261,7 +261,7 @@
             <widget class="QComboBox" name="postSCFCombo">
              <item>
               <property name="text">
-               <string>none</string>
+               <string>None</string>
               </property>
              </item>
              <item>
@@ -408,8 +408,8 @@
           <rect>
            <x>320</x>
            <y>0</y>
-           <width>291</width>
-           <height>151</height>
+           <width>361</width>
+           <height>101</height>
           </rect>
          </property>
          <property name="title">
@@ -420,8 +420,8 @@
            <rect>
             <x>10</x>
             <y>30</y>
-            <width>271</width>
-            <height>61</height>
+            <width>331</width>
+            <height>66</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
@@ -464,11 +464,6 @@
               <widget class="QComboBox" name="occCombo">
                <item>
                 <property name="text">
-                 <string>none</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
                  <string>gaussian</string>
                 </property>
                </item>
@@ -487,7 +482,7 @@
              <item>
               <widget class="QDoubleSpinBox" name="occWidthSpin">
                <property name="enabled">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="singleStep">
                 <double>0.010000000000000</double>
@@ -506,7 +501,7 @@
          <property name="geometry">
           <rect>
            <x>320</x>
-           <y>160</y>
+           <y>110</y>
            <width>161</width>
            <height>101</height>
           </rect>
@@ -528,6 +523,12 @@
             <widget class="QDoubleSpinBox" name="relaxationTolSpin">
              <property name="enabled">
               <bool>false</bool>
+             </property>
+             <property name="singleStep">
+              <double>0.010000000000000</double>
+             </property>
+             <property name="value">
+              <double>0.010000000000000</double>
              </property>
             </widget>
            </item>
@@ -559,9 +560,9 @@
          <property name="geometry">
           <rect>
            <x>490</x>
-           <y>160</y>
-           <width>231</width>
-           <height>101</height>
+           <y>110</y>
+           <width>221</width>
+           <height>151</height>
           </rect>
          </property>
          <property name="title">
@@ -572,24 +573,39 @@
            <rect>
             <x>10</x>
             <y>30</y>
-            <width>211</width>
-            <height>61</height>
+            <width>201</width>
+            <height>111</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
            <item row="1" column="2">
-            <widget class="QSpinBox" name="gridZSpin"/>
+            <widget class="QSpinBox" name="gridZSpin">
+             <property name="value">
+              <number>4</number>
+             </property>
+            </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QSpinBox" name="gridYSpin"/>
+            <widget class="QSpinBox" name="gridYSpin">
+             <property name="value">
+              <number>4</number>
+             </property>
+            </widget>
            </item>
            <item row="1" column="0">
-            <widget class="QSpinBox" name="gridXSpin"/>
+            <widget class="QSpinBox" name="gridXSpin">
+             <property name="value">
+              <number>4</number>
+             </property>
+            </widget>
            </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_4">
              <property name="text">
               <string>X</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
              </property>
             </widget>
            </item>
@@ -598,12 +614,55 @@
              <property name="text">
               <string>Y</string>
              </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
             </widget>
            </item>
            <item row="0" column="2">
             <widget class="QLabel" name="label_9">
              <property name="text">
               <string>Z</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>Offset</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QDoubleSpinBox" name="offsetXSpin">
+             <property name="maximum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.010000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QDoubleSpinBox" name="offsetYSpin">
+             <property name="maximum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.010000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="QDoubleSpinBox" name="offsetZSpin">
+             <property name="maximum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.010000000000000</double>
              </property>
             </widget>
            </item>
